<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.PriceSettingActivity">

    <com.iskyun.im.widget.ListItemView
        android:id="@+id/price_setting_video"
        style="@style/ListItemViewAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:list_item_content="@string/unselect"
        app:list_item_title="@string/video_call_price" />

    <com.iskyun.im.widget.ListItemView
        android:id="@+id/price_setting_voice"
        style="@style/ListItemViewAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_setting_video"
        app:list_item_content="@string/unselect"
        app:list_item_title="@string/voice_call_price" />

    <com.iskyun.im.widget.ListItemView
        android:id="@+id/price_setting_chat"
        style="@style/ListItemViewAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_setting_voice"
        app:list_item_content="@string/unselect"
        app:list_item_title="@string/msg_price" />

    <com.iskyun.im.widget.ListItemView
        android:id="@+id/price_setting_look_wx"
        style="@style/ListItemViewAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_setting_chat"
        app:list_item_content="@string/unselect"
        app:list_item_title="@string/look_wx_price" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{TextUtils.isEmpty(priceBody.videoPrice) ? @string/unselect : priceBody.videoPrice+@string/video_minute}"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/price_setting_look_wx" />
</androidx.constraintlayout.widget.ConstraintLayout>
