<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.iskyun.im.ui.home.frag.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dynamic"
        android:name="com.iskyun.im.ui.dynamic.frag.DynamicFragment"
        android:label="@string/title_dynamic"
        tools:layout="@layout/fragment_dynamic" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.iskyun.im.ui.message.frag.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.iskyun.im.ui.mine.frag.MineFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />
</navigation>