<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.common.PayActivity">

    <TextView
        android:id="@+id/pay_tv_order_detail"
        style="@style/AppText"
        android:text="@string/order_detail"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pay_tv_order_amount"
        style="@style/AppText"
        android:text="@string/order_amount"
        android:layout_marginTop="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="@+id/pay_tv_order_detail"
        app:layout_constraintTop_toBottomOf="@+id/pay_tv_order_detail" />

    <TextView
        android:id="@+id/pay_tv_pay_way"
        style="@style/AppText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/pay_way"
        android:gravity="center_vertical"
        android:background="@color/gray"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="@+id/pay_tv_order_detail"
        app:layout_constraintTop_toBottomOf="@+id/pay_tv_order_amount" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pay_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pay_tv_pay_way"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/pay_btn_pay"
        style="@style/AppBtn"
        android:text="@string/payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>