<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_vip_bg">

    <TextView
        android:id="@+id/agreement_tv_title"
        style="@style/AppTextWhite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/accent_top_radius_bg"
        android:gravity="center"
        android:text="@string/privacy_agreement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreement_tv_title"/>


    <Button
        android:id="@+id/agreement_btn_agree"
        style="@style/AppBtn"
        android:layout_width="150dp"
        android:layout_height="@dimen/common_tv_height"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_color_accent_bg"
        android:text="@string/agree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webView"/>

    <Button
        android:id="@+id/agreement_btn_disagree"
        style="@style/AppBtn"
        android:layout_height="@dimen/common_tv_height"
        android:layout_marginTop="@dimen/content_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@null"
        android:text="@string/disagree_and_logout"
        android:textColor="@color/colorContent"
        app:layout_constraintTop_toBottomOf="@+id/agreement_btn_agree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>